// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Paragraph should be readOnly 1`] = `
<div class="form-group">
  <div class="form-group liferay-ddm-form-field-paragraph" data-fieldname="textField">
    <div class="liferay-ddm-form-field-paragraph-text"></div>
  </div>
</div>
`;

exports[`Field Paragraph should have a helptext 1`] = `
<div class="form-group">
  <div class="form-group liferay-ddm-form-field-paragraph" data-fieldname="textField">
    <div class="liferay-ddm-form-field-paragraph-text"></div>
  </div><span class="form-text">Type something</span>
</div>
`;

exports[`Field Paragraph should have a key 1`] = `
<div class="form-group">
  <div class="form-group liferay-ddm-form-field-paragraph" data-fieldname="textField">
    <div class="liferay-ddm-form-field-paragraph-text"></div>
  </div>
</div>
`;

exports[`Field Paragraph should have a label 1`] = `
<div class="form-group"><label>label </label>
  <div class="form-group liferay-ddm-form-field-paragraph" data-fieldname="textField">
    <div class="liferay-ddm-form-field-paragraph-text"></div>
  </div>
</div>
`;

exports[`Field Paragraph should have a placeholder 1`] = `
<div class="form-group">
  <div class="form-group liferay-ddm-form-field-paragraph" data-fieldname="textField">
    <div class="liferay-ddm-form-field-paragraph-text"></div>
  </div>
</div>
`;

exports[`Field Paragraph should have a spritemap 1`] = `
<div class="form-group">
  <div class="form-group liferay-ddm-form-field-paragraph" data-fieldname="textField">
    <div class="liferay-ddm-form-field-paragraph-text"></div>
  </div>
</div>
`;

exports[`Field Paragraph should have a value 1`] = `
<div class="form-group">
  <div class="form-group liferay-ddm-form-field-paragraph" data-fieldname="textField">
    <div class="liferay-ddm-form-field-paragraph-text"></div>
  </div>
</div>
`;

exports[`Field Paragraph should have an id 1`] = `
<div class="form-group">
  <div class="form-group liferay-ddm-form-field-paragraph" data-fieldname="textField">
    <div class="liferay-ddm-form-field-paragraph-text"></div>
  </div>
</div>
`;

exports[`Field Paragraph should not be required 1`] = `
<div class="form-group">
  <div class="form-group liferay-ddm-form-field-paragraph" data-fieldname="textField">
    <div class="liferay-ddm-form-field-paragraph-text"></div>
  </div>
</div>
`;

exports[`Field Paragraph should render Label if showLabel is true 1`] = `
<div class="form-group"><label>text </label>
  <div class="form-group liferay-ddm-form-field-paragraph" data-fieldname="textField">
    <div class="liferay-ddm-form-field-paragraph-text"></div>
  </div>
</div>
`;
